working on adding attendees

--- a/Alllive/Views/Home/Catalog.cshtml
+++ b/Alllive/Views/Home/Catalog.cshtml
@@ -31,9 +31,9 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Schedule Meeting", "ScheduleMeeting", "Navigation")</li>
-                <li>@Html.ActionLink("Join Meeting", "JoinMeeting", "Navigation")</li>
-                <li>@Html.ActionLink("Host Meeting", "HostMeeting", "Navigation")</li>
+                <li>@Html.ActionLink("Schedule Meeting", "ScheduleMeeting", "Meeting")</li>
+                <li>@Html.ActionLink("Join Meeting", "JoinMeeting", "Meeting")</li>
+                <li>@Html.ActionLink("Host Meeting", "StartMeeting", "Meeting")</li>
 
             </ul>
             @*<div class="loginButton">
