--- a/Alllive/Views/Meeting/ScheduleMeeting.cshtml
+++ b/Alllive/Views/Meeting/ScheduleMeeting.cshtml
@@ -6,9 +6,10 @@
 
 <h2>Schedule Meeting</h2>
 
-@using (Ajax.BeginForm("SaveMeeting", "Navigation", new AjaxOptions { HttpMethod = "POST", OnBegin="SaveMeeting_Begin()" }))
+@using (Ajax.BeginForm("SaveMeeting", "Meeting", new AjaxOptions { HttpMethod = "POST", OnBegin="SaveMeeting_Begin()",UpdateTargetId="mainBody", InsertionMode=InsertionMode.Replace }))
 {
     @Html.HiddenFor(a=>a.SessionID)
+    @Html.HiddenFor(a=>a.HostUserID)
     <div class="container">
         <div class="row">
             <div class="col-sm-2">
@@ -41,9 +42,12 @@
             @Html.Label("Start Time")
         </div>
         <div class="col-sm-4">
-            @Html.TextBoxFor(a => a.StartTime, new { @class = "form-control"})
-            @*@Html.DropDownListFor(a => a.StartTime, (IEnumerable<SelectListItem>)ViewBag.minuteOptions, new { @class = "form-control timep" })*@
-
+            <div class="input-group date">
+                @Html.TextBoxFor(a => a.StartTime, new { @class = "form-control" })
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-time"></span>
+                </span>
+            </div>
         </div>
         @*<div class='input-group date' id='datepicker'>
                 <input type='text' class="form-control" />
@@ -57,8 +61,13 @@
             @Html.Label("End Time")
         </div>
         <div class="col-sm-4">
-            @Html.TextBoxFor(a => a.EndTime, new { @class = "form-control"})
-            @*@Html.DropDownListFor(a => a.EndTime, (IEnumerable<SelectListItem>)ViewBag.minuteOptions, new { @class = "form-control timep" })*@
+            <div class="input-group date">
+                @Html.TextBoxFor(a => a.EndTime, new { @class = "form-control" })
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-time"></span>
+                </span>
+            </div>
+
         </div>
     </div>
     <div class="row">
@@ -344,8 +353,14 @@
               @Html.Label("By", new { @class = "form-check-label" })
                  </div>
             <div class="col-sm-4">
-                    @Html.TextBoxFor(a=>a.EndDateBy, new { @placeholder = "MM/DD/YYYY", @class = "form-control" })
-            </div>
+                <div class="input-group date">
+                    @Html.TextBoxFor(a => a.EndDateBy, new { @class = "form-control" })
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-time"></span>
+                    </span>
+                </div>
+
+           </div>
          </div>
                    <div class="row">
                        <div class="col-sm-2">
@@ -423,8 +438,8 @@
             };
 
             $.ajax({
-                 method: 'PUT',
-                 url: '@Url.Action("SaveAttendee", "Navigation")',
+                 method: 'POST',
+                 url: '@Url.Action("SaveAttendee", "Meeting")',
                  data: JSON.stringify(m),
                  
                  contentType: "application/json",
@@ -447,10 +462,32 @@
             $("#editRate").val(rate);
 
         }
+        function DeleteAttendeeClick(attendeeID,btn) {
+            
+            var result = confirm("Are you sure you want to delete this attendee?");
+            if (result === true) {
+                 $.ajax({
+                 method: 'GET',
+                 url: '@Url.Action("DeleteAttendee", "Meeting")?attendeeID='+attendeeID,
+                 success: function (response) {
+                     if (response.result === "ok") {
+                         var row = $(btn).closest(".row");
+                         $(row).remove();
+                     }
+                 }
+
+            })
+
+            }
+        }
+        function datetimechange(e) {
+            $("input", this).val(e.date._d); // sets input to selected date
+        }
         $(document).ready(function () {
-        $("#EndDateBy").datepicker();
-        $("#StartTime").datepicker();
-        $("#EndTime").datepicker();
+            var dtoptions = { locale: "en" };
+        $("#EndDateBy").datetimepicker(dtoptions).on("dp.change",datetimechange);
+        $("#StartTime").datetimepicker(dtoptions).on("dp.change",datetimechange);
+        $("#EndTime").datetimepicker(dtoptions).on("dp.change",datetimechange);
 
         //$('#datepicker').datepicker();
         $("#Recurr").click(function () {
