--- a/Alllive/Views/Shared/_Layout.cshtml
+++ b/Alllive/Views/Shared/_Layout.cshtml
@@ -6,24 +6,10 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/bootstrap")
 
-
-    <script src="~/Scripts/jquery-3.5.1.js"></script>
-    @*<script src="~/Scripts/jquery-ui.js"></script>*@
-    @*<script src="~/Scripts/jquery-ui-1.12.1.js"></script>
-    <script src="~/Scripts/jqueryui/jquery-ui.js"></script>*@
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/moment.min.js"></script>
-    @*<script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>*@
-
-
-    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>*@ <!--include your less or built css files-->
-    <!--
-    bootstrap-datetimepicker-build.less will pull in "../bootstrap/variables.less" and "bootstrap-datetimepicker.less";
-    or
-    <link rel="stylesheet" href="/Content/bootstrap-datetimepicker.css" />
-    -->
 
 </head>
 <body>
@@ -45,10 +31,10 @@
 
                     @if (Session["AllLiveUser"] != null)
                     {
-                    <li>@Html.ActionLink("New Meeting", "ScheduleMeeting", "Navigation")</li>
-                    <li>@Html.ActionLink("Schedule", "Schedule", "Navigation")</li>
+                    <li>@Html.ActionLink("New Meeting", "ScheduleMeeting", "Meeting")</li>
+                    <li>@Html.ActionLink("Schedule", "Index", "Home")</li>
                     }
-                    <li>@Html.ActionLink("Join Meeting", "JoinMeeting", "Navigation")</li>
+                    <li>@Html.ActionLink("Join Meeting", "JoinMeeting", "Meeting")</li>
                     <li>@Html.ActionLink("Distance Learning", "DistanceLearning", "Navigation")</li>
                     <li>@Html.ActionLink("Online Childrens Yoga", "OnlineYoga", "Navigation")</li>
                     <li>@Html.ActionLink("Search Tutors", "SearchTutor", "Search")</li>
@@ -77,7 +63,9 @@
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
+        <div id="mainBody">
+            @RenderBody()
+        </div>
         <hr />
         <footer>
             <div style="left: 20px; text-align: left; background-color: #ffffff;">
@@ -94,9 +82,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")
-    @Scripts.Render("~/bundles/bootstrap")
     
 
     @RenderSection("scripts", required: false)
